--- a/index.html
+++ b/index.html
@@ -214,9 +214,8 @@
         <div class="container">
           <form>
               <div class="input-field">
-                <input id="name" type="text" class="validate" name="name">
-                <label for="name">Name</label>
-                <span class="helper-text" data-error="please enter valid credential"></span>
+                <input id="nam" type="text" class="validate" name="name">
+                <label for="nam">Name</label>
               </div>
               <div class="input-field">
                 <input id="email" type="email" class="validate" name="email">
