--- a/index.html
+++ b/index.html
@@ -84,7 +84,11 @@
         </div>
     </div>
 
-    <hr>
+    <br>
+    <br>
+    <div class="backimg backimg1"></div>
+    <br>
+    <br>
 
     <div class="container">
         <h2>My Projects</h2>
@@ -203,8 +207,9 @@
           </div>
     </div>
 
-    <hr>
-
+    <br>
+    <br>
+    <div class="backimg2 backimg"></div>
     <br>
     <br>
 
@@ -214,7 +219,7 @@
         <h2 class="center">Get in Touch...</h2>
         <br>
         <div class="container">
-          <form>
+          <form id="form">
               <div class="input-field">
                 <input id="nam" type="text" class="validate" name="name" autocomplete="off">
                 <label for="nam">Name</label>
