--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Niconne&family=Piedra&display=swap" rel="stylesheet">
     
+    <link rel="manifest" href="./manifest.json">
     <script src="./scripts/index.js" type="module" defer></script>
     <title>Rajkumar Blog</title>
 </head>
