full screen mode

--- a/index.html
+++ b/index.html
@@ -34,16 +34,17 @@
         <label for="name">Name</label>
         <span class="helper-text" data-error="please enter valid credential"></span>
       </div>
+      <span>FullScreen is recommeneded for better user experience. You can switch between the fullscreen mode by clicking "Rajkumar's Blog" XD</span>
     </div>
     <div class="modal-footer">
-      <a href="#" class="modal-close waves-effect waves-green btn-flat red-text">close</a>
+      <a href="#" class="modal-close waves-effect waves-green btn-flat red-text" id="goFS">FullScreen</a>
       <a href="#" class="modal-close waves-effect waves-green btn-flat green-text sendName">continue</a>
     </div>
   </div>
 
 
     <div class="main-image">
-        <div class="heading">
+        <div class="heading" id="extfullscreen">
             <span>Rajkumar's Blog</span>
         </div>
     </div>
