new animation version

--- a/index.html
+++ b/index.html
@@ -88,6 +88,57 @@
 
     <br>
     <br>
+
+    <div class="container">
+      <div class="row padding-row">
+        <h2 class="skillset">My Skills</h2>
+        <br>
+        <br>
+          <div class="col s12 m9 l9 center-align">
+
+              <div class="progbar row" style="height: 30px;">
+                <p class="col s3" style="margin: 0;">JavaScript</p>
+                <div class="progress col s9" style="vertical-align: center;">
+                  <div class="determinate" style="width: 0%"></div>
+                </div>
+              </div>
+              <div class="progbar row" style="height: 30px;">
+                <p class="col s3" style="margin: 0;">HTML</p>
+                <div class="progress col s9" style="vertical-align: center;">
+                  <div class="determinate" style="width: 0%"></div>
+                </div>
+              </div>
+              <div class="progbar row" style="height: 30px;">
+                <p class="col s3" style="margin: 0;">CSS</p>
+                <div class="progress col s9" style="vertical-align: center;">
+                  <div class="determinate" style="width: 0%"></div>
+                </div>
+              </div>
+              <div class="progbar row" style="height: 30px;">
+                <p class="col s3" style="margin: 0;">React JS</p>
+                <div class="progress col s9" style="vertical-align: center;">
+                  <div class="determinate" style="width: 0%"></div>
+                </div>
+              </div>
+              <div class="progbar row" style="height: 30px;">
+                <p class="col s3" style="margin: 0;">Node JS</p>
+                <div class="progress col s9" style="vertical-align: center;">
+                  <div class="determinate" style="width: 0%"></div>
+                </div>
+              </div>
+              <div class="progbar row" style="height: 30px;">
+                <p class="col s3" style="margin: 0;">Django</p>
+                <div class="progress col s9" style="vertical-align: center;">
+                  <div class="determinate" style="width: 0%"></div>
+                </div>
+              </div>
+              
+          </div>
+      </div>
+  </div>
+
+    <br>
+    <br>
     <div class="backimg backimg1"></div>
     <br>
     <br>
