new animation version

--- a/index.html
+++ b/index.html
@@ -137,6 +137,24 @@
       </div>
   </div>
 
+
+  <div class="container"> 
+    <br>
+    <br>
+    <br>
+    <h2 class="skillset">My Resume</h2>
+    <div class="resume">
+      <img src="./images/img1.png" alt="" width="100%">
+      <img src="./images/img2.png" alt="" width="100%">
+      <img src="./images/img3.png" alt="" width="100%">
+      <img src="./images/img4.png" alt="" width="100%">
+      <img src="./images/img5.png" alt="" width="100%">
+      <img src="./images/img6.png" alt="" width="100%">
+    </div>
+    <br>
+    <br>  
+  </div>
+
     <br>
     <br>
     <div class="backimg backimg1"></div>
