new animation version

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <span>FullScreen is recommeneded for better user experience. You can switch between the fullscreen mode by clicking "Rajkumar's Blog" XD</span>
     </div>
     <div class="modal-footer">
-      <a href="#" class="modal-close waves-effect waves-green btn-flat red-text" id="goFS">FullScreen</a>
+      <a href="#" class="modal-close waves-effect waves-green btn-flat red-text" id="goFSnot">close</a>
       <a href="#" class="modal-close waves-effect waves-green btn-flat green-text sendName">continue</a>
     </div>
   </div>
