--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Niconne&family=Piedra&display=swap" rel="stylesheet">
     
     <link rel="manifest" href="./manifest.json">
-    <script src="./scripts/index.js" type="module" defer></script>
+    <script src="./index.js" type="module" defer></script>
     <title>Rajkumar Blog</title>
 </head>
 <body class="light-theme">
@@ -161,7 +161,7 @@
     <br>
     <br>
 
-    <div class="container">
+    <div class="container gd-align">
         <h2>My Projects</h2>
         <div class="row">
             <div class="col s12 m6 l4">
@@ -325,6 +325,20 @@
 
     <br>
     <br>
+
+    <div class="container">
+      <h2>Follow me on</h2>
+      <br>
+      <br>
+      <div class="social-media row">
+        <a target="_blank" href="https://www.instagram.com/dark_world_dimension/" class="col s2 offset-s2 l1 offset-l4"><img src="./images/svg/025-instagram.svg" alt="instagram"></a>
+        <a target="_blank" href="https://www.linkedin.com/in/rajkumar-r-a20495154" class="col s2 l1"><img src="./images/svg/045-linkedin.svg" alt="linkedin"></a>
+        <a target="_blank" href="https://github.com/rajkumar1206" class="col s2 l1"><img src="./images/svg/038-github.svg" alt="github"></a>
+        <a target="_blank" href="mailto:rajkumar.r.mys@gmail.com" class="col s2 l1"><img src="./images/svg/047-google-plus.svg" alt="gp"></a>
+      </div>
+      <br>
+      <br>
+    </div>
     
 
     <footer class="page-footer">
@@ -337,10 +351,10 @@
         <div class="col l4 offset-l2 s12">
             <h5 class="white-text">Follow me and Links</h5>
             <ul>
-            <li><a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/rajkumar-r-a20495154">LinkedIn</a></li>
-            <li><a class="grey-text text-lighten-3" href="https://www.instagram.com/dark_world_dimension/">Instagram</a></li>
-            <li><a class="grey-text text-lighten-3" href="https://github.com/rajkumar1206">Github</a></li>
-            <li><a class="grey-text text-lighten-3" href="mailto:rajkumar.r.mys@gmail.com">Email</a></li>
+            <li><a target="_blank" class="grey-text text-lighten-3" href="https://www.linkedin.com/in/rajkumar-r-a20495154">LinkedIn</a></li>
+            <li><a target="_blank" class="grey-text text-lighten-3" href="https://www.instagram.com/dark_world_dimension/">Instagram</a></li>
+            <li><a target="_blank" class="grey-text text-lighten-3" href="https://github.com/rajkumar1206">Github</a></li>
+            <li><a target="_blank" class="grey-text text-lighten-3" href="mailto:rajkumar.r.mys@gmail.com">Email</a></li>
             </ul>
         </div>
         </div>
