--- a/index.html
+++ b/index.html
@@ -72,13 +72,14 @@
 
 
     <div class="container">
-        <div class="row padding-row">
+        <div class="row padding-row intro">
+          <h2 id="devint">Developer</h2>
             <div class="col s12 m6 l8">
-                <h2>Developer</h2>
                 <p>I'm Rajkumar</p>
                 <p> I'm a Full Stack Web Developer having experience over two year when this blog was official hosted, and also presently I am working as a role of Data Scientist having experience over six months.</p>
-                <p>I have created multiple application and hosted on server.</p>
-                <p>This is a blog where all the works done by me are linked together...</p>
+                <p>This is a blog where all the works done by me are linked together.</p>
+                <p>This website is designed with high graphics and cooler animation to make the best user expierence ever, I have included full screen mode and dark theme feature for better looks and best selective images to feel amazing and attractive.</p>
+                <p>This blog is created from scratch without any template of workpress or vix. The frontend is implemented with vanilla JavaScript and backend is developed with python (Django). </p>
             </div>
             <div class="col s12 m6 l4 center">
                 <img src="./images/admin-photo.jpg" alt="" width="300" height="300" class="center">
