added colors project

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     <p>Colors HRMS is an application where HR can sign up and can manage all the employee details in their organisation. And employee can login and can apply leave which must be approved by HR</p>
                   </div>
                   <div class="card-action">
-                    <a href=" https://github.com/orgs/KavachNetworks/teams/2020t0016/repositories">Link</a>
+                    <a href="https://github.com/KavachNetworks/Colors_HRMS_Docs/blob/master/README.md">Link</a>
                   </div>
                 </div>
               </div>
