--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="This is Rajkumars's Blog, I am Rajkumar, FullStack Web Developer, I stay in Mysore and Studying in College of NIE. This is my official Blog where all my skills and projects are listed.">
-    <meta name="keywords" content="Rajkumar's Blog, Full Stack Web Developer, Mysore">
+    <meta name="description" content="I am Rajkumar,This is Rajkumars's Blog,I'm FullStack Web Developer, I stay in Mysore and Studying in College of NIE. This is my official Blog where all my skills and projects are listed.">
+    <meta name="keywords" content="Rajkumar's Blog, Rajkumar, Developer blog, Full Stack Web Developer, Mysore">
     <meta name="author" content="Rajkumar R">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1">
