--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                   </p>
                 </div>
                 <div class="card-action">
-                  <a href="http://rsms-mysuru.herokuapp.com/">Link</a>
+                  <a href="https://rsms-mysuru.herokuapp.com/">Link</a>
                 </div>
               </div>
             </div>
