final edit on links

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       <span>FullScreen is recommeneded for better user experience. You can switch between the fullscreen mode by clicking "Rajkumar's Blog" XD</span>
     </div>
     <div class="modal-footer">
-      <a href="#" class="modal-close waves-effect waves-green btn-flat red-text" id="goFSnot">close</a>
-      <a href="#" class="modal-close waves-effect waves-green btn-flat green-text sendName">continue</a>
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat red-text" id="goFSnot">close</a>
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat green-text sendName">continue</a>
     </div>
   </div>
 
@@ -205,7 +205,7 @@
                   </p>
                 </div>
                 <div class="card-action">
-                  <a href="https://rsms-mysuru.herokuapp.com/">Link</a>
+                  <a rel="noopener" target="_blank" href="https://rsms-mysuru.herokuapp.com/">Link</a>
                 </div>
               </div>
             </div>
@@ -220,7 +220,7 @@
                   <p>This is an progressive web application pwa where user can add the birthdays, and we can view the list of birthday with the real time remainning days left to wish to their birthday.</p>
                 </div>
                 <div class="card-action">
-                  <a href="https://rajkumar1206.github.io/birthday-reminder.pwa/">Link</a>
+                  <a rel="noopener" target="_blank" href="https://rajkumar1206.github.io/birthday-reminder.pwa/">Link</a>
                 </div>
               </div>
             </div>
@@ -237,7 +237,7 @@
                     <p>Exodia is a 36hours Hackathon wherein we needed to design the frontend without any library. I had designed multipage application with cooler animation and won the first prize.</p>
                   </div>
                   <div class="card-action">
-                    <a href=" https://rajkumar1206.github.io/exodia/">Link</a>
+                    <a rel="noopener" target="_blank"  href=" https://rajkumar1206.github.io/exodia/">Link</a>
                   </div>
                 </div>
               </div>
@@ -252,7 +252,7 @@
                     <p>IPL Database is an application where user can sign up or login to our application and can maintain all the information of IPL with include players, teams, seasons, match and score table.</p>
                   </div>
                   <div class="card-action">
-                    <a href="https://ipl-database-pro.github.io/frontend/login.html ">Link</a>
+                    <a rel="noopener" target="_blank" href="https://ipl-database-pro.github.io/frontend/login.html ">Link</a>
                   </div>
                 </div>
               </div>
@@ -269,7 +269,7 @@
                     <p>Colors HRMS is an application where HR can sign up and can manage all the employee details in their organisation. And employee can login and can apply leave which must be approved by HR</p>
                   </div>
                   <div class="card-action">
-                    <a href="https://github.com/KavachNetworks/Colors_HRMS_Docs/blob/master/README.md">Link</a>
+                    <a rel="noopener" target="_blank" href="https://github.com/KavachNetworks/Colors_HRMS_Docs/blob/master/README.md">Link</a>
                   </div>
                 </div>
               </div>
@@ -284,7 +284,7 @@
                     <p>It was a native application where there is two level of authentication and data management with Google maps API integration and working with live location of the user with database management.</p>
                   </div>
                   <div class="card-action">
-                    <a href="#">Link Inactive</a>
+                    <a href="#!">Link Inactive</a>
                   </div>
                 </div>
               </div>
@@ -299,7 +299,7 @@
                     <p>It was a project of user and admin sign in and sign up console based C programming application with authentication and information accessing.</p>
                   </div>
                   <div class="card-action">
-                    <a href="https://github.com/rajkumar1206/cprog-student-data">Link</a>
+                    <a rel="noopener" target="_blank" href="https://github.com/rajkumar1206/cprog-student-data">Link</a>
                   </div>
                 </div>
               </div>
