--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     
     <script src="./index.js" type="module" defer></script>
     <link rel="stylesheet" href="./styles/styles.css">
+
+    <script data-ad-client="ca-pub-8806550354481902" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <title>Rajkumar Blog</title>
 </head>
 <body class="light-theme">
