added text style

--- a/index.html
+++ b/index.html
@@ -117,37 +117,37 @@
           <div class="col s12 m9 l9 center-align">
 
               <div class="progbar row" style="height: 30px;">
-                <p class="col s3" style="margin: 0;">JavaScript</p>
+                <p class="col s3" style="margin: 0; font-size: small;">JavaScript</p>
                 <div class="progress col s9" style="vertical-align: center;">
                   <div class="determinate" style="width: 0%"></div>
                 </div>
               </div>
               <div class="progbar row" style="height: 30px;">
-                <p class="col s3" style="margin: 0;">HTML</p>
+                <p class="col s3" style="margin: 0; font-size: small;">HTML</p>
                 <div class="progress col s9" style="vertical-align: center;">
                   <div class="determinate" style="width: 0%"></div>
                 </div>
               </div>
               <div class="progbar row" style="height: 30px;">
-                <p class="col s3" style="margin: 0;">CSS</p>
+                <p class="col s3" style="margin: 0; font-size: small;">CSS</p>
                 <div class="progress col s9" style="vertical-align: center;">
                   <div class="determinate" style="width: 0%"></div>
                 </div>
               </div>
               <div class="progbar row" style="height: 30px;">
-                <p class="col s3" style="margin: 0;">React JS</p>
+                <p class="col s3" style="margin: 0; font-size: small;">React JS</p>
                 <div class="progress col s9" style="vertical-align: center;">
                   <div class="determinate" style="width: 0%"></div>
                 </div>
               </div>
               <div class="progbar row" style="height: 30px;">
-                <p class="col s3" style="margin: 0;">Node JS</p>
+                <p class="col s3" style="margin: 0; font-size: small;">Node JS</p>
                 <div class="progress col s9" style="vertical-align: center;">
                   <div class="determinate" style="width: 0%"></div>
                 </div>
               </div>
               <div class="progbar row" style="height: 30px;">
-                <p class="col s3" style="margin: 0;">Django</p>
+                <p class="col s3" style="margin: 0; font-size: small;">Django</p>
                 <div class="progress col s9" style="vertical-align: center;">
                   <div class="determinate" style="width: 0%"></div>
                 </div>
