--- a/index.html
+++ b/index.html
@@ -348,21 +348,21 @@
           <form id="form">
               <div class="input-field">
                 <input id="nam" type="text" class="validate" name="name" autocomplete="off" placeholder="Enter your name">
-                <!-- <label for="nam">Name</label> -->
+                <label for="nam">Name</label>
               </div>
               <div class="input-field">
                 <input id="email" type="email" class="validate" name="email"  autocomplete="off" placeholder="Enter your email id">
-                <!-- <label for="email">Email</label> -->
+                <label for="email">Email</label>
                 <span class="helper-text" data-error="please enter the vaild email"></span>
               </div>
               <div class="input-field">
                 <input id="sub" type="text" class="validate" name="subject" autocomplete="off" placeholder="Enter your subject of your message">
-                <!-- <label for="sub">Subject</label> -->
+                <label for="sub">Subject</label>
                 <!-- <span class="helper-text" data-error="Enter the valid credential">Enter the subject of your message</span> -->
               </div>
               <div class="input-field">
                 <textarea id="textarea1" class="materialize-textarea" name="text" autocomplete="off" placeholder="Enter your message"></textarea>
-                <!-- <label for="textarea1">Message</label> -->
+                <label for="textarea1">Message</label>
               </div>
 
               <div class="center">
