--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
     <div class="container">
       <div class="row padding-row">
         <article>
-        <h2 class="skillset">My Skills</h2>
+        <h2>My Skills</h2>
           <p>I'm really great in Frontend Graphics Designing and API Integration, my personal insterest is playing with designing and Graphics. I am also flexible working with backend but also prefer frontend development to backend. The Primary language combimation which I code is React JS with Django (sometimes use node js). And I always prefer REST API to separate Frontend and Backend so it will be neater.</p>
           <p>My Best Skills is Web Developer when compared to other fields. I also work with Koltin native Android application Developer and with Flutter Framework to create Mobile applications.</p>
-          <p>I've worked with Machine Learning Algorithms using python language in jupyter notebook and i really enjoy doing machine learning and deep learning algorithm but as we will use only packages which makes uur lifes easily i lost my interest partially and working with Web Technologies.</p>
+          <p class="skillset">I've worked with Machine Learning Algorithms using python language in jupyter notebook and i really enjoy doing machine learning and deep learning algorithm but as we will use only packages which makes uur lifes easily i lost my interest partially and working with Web Technologies.</p>
         </article>
         <br>
           <div class="col s12 m9 l9 center-align">
@@ -160,9 +160,9 @@
 
   <div class="container padding-row">
     <article>
-      <h2 id="chatshow">Languages used in this site</h2>
+      <h2>Languages used in this site</h2>
       <p><span style="margin-left: 30px; font-size: 2rem;">T</span>his site is majorly focused on Frontend Designing and its all about User expierence, to provide the best expierence to the visiters and more overly to gain knowledge by reading, visiting my projects and designing skills used in my websites.</p>
-      <p>This site consists around 40 percentage of JavaScript which is used to integrate with backend and also making the site more responsive with data and error handing. And HTML CSS combined makes 40% of this site to make basic texts and stylings with animations. The backend is simple as most of this website is static except the form data to be submitted which will be sent via CORS policy (Cross-Origin Resource Sharing), which is catched by backend and stored in Database for future refernces.</p>
+      <p id="chatshow">This site consists around 40 percentage of JavaScript which is used to integrate with backend and also making the site more responsive with data and error handing. And HTML CSS combined makes 40% of this site to make basic texts and stylings with animations. The backend is simple as most of this website is static except the form data to be submitted which will be sent via CORS policy (Cross-Origin Resource Sharing), which is catched by backend and stored in Database for future refernces.</p>
     </article>
     <div class="chat">
       <div id="chartdiv"></div>
