--- a/index.html
+++ b/index.html
@@ -35,6 +35,27 @@
 </head>
 <body class="light-theme">
 
+  <div id="setup">
+    <div class="bounce-ball">
+      <div class="box"></div>
+    </div>
+    <div class="container">
+      <h5>Rajkumar Blog</h5>
+      <div class="first-anime">
+        <span class="blue-anime">Thanks for visiting my website</span>
+        <br>
+        <br>
+        <span class="purple-anime">Hope you will like it XD</span>
+      </div>
+      <div class="second-anime">
+        <p class="text-writing-1">
+        </p>
+        <p class="text-writing-2">
+        </p>
+      </div>
+    </div>
+  </div>
+
   <div class="spinner"><div class="lds-hourglass"></div></div>
 
   <div id="modal1" class="modal">
