--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="I am Rajkumar, this is Rajkumar's Blog ie my blog. I'm FullStack Web Developer, I stay in Mysore and Studying in College of NIE. This is my official Blog where all my skills and projects are listed.">
+    <meta name="description" content="I am Rajkumar, this is Rajkumar Blog ie my blog. I'm FullStack Web Developer, I stay in Mysore and Studying in College of NIE. This is my official Blog where all my skills and projects are listed.">
     <meta name="keywords" content="Rajkumar Blog, Rajkumar mysore, Developer blog, Full Stack Web Developer, Rajkumar">
     <meta name="author" content="Rajkumar R">
 
@@ -61,8 +61,8 @@
   <div id="modal1" class="modal">
     <div class="modal-content">
       <br>
-      <h5>Welcome to Rajkumar's Blog...</h5>
-      <span>Thank you for visiting my Blog... Please enter your name to continue...</span>
+      <h5>Welcome to Rajkumar Blog.</h5>
+      <span>Thank you for visiting my Blog. Please enter your name to continue.</span>
       <br>
       <br>
       <div class="input-field">
@@ -81,7 +81,7 @@
 
     <div class="main-image">
         <div class="heading" id="extfullscreen">
-            <span>Rajkumar's Blog</span>
+            <span>Rajkumar Blog</span>
         </div>
     </div>
 
@@ -109,7 +109,7 @@
     <article>
       <div class="container">
         <div class="row padding-row intro">
-          <h2 id="devint">Developer</h2>
+          <h2 id="devint">Rajkumar Blog - Developer</h2>
           <div class="col s12 m6 l8">
             <p>I'm Rajkumar, I've been living in Mysore from past 15 years and currectly studying Engineering in NIE college.</p>
             <p> I'm a Full Stack Web Developer having experience over two year when this blog was official hosted, and also presently I am working as a role of Data Scientist having experience over six months.</p>
