--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container">
       <h5>Rajkumar Blog</h5>
       <div class="first-anime">
-        <span class="blue-anime">Thanks for visiting my website</span>
+        <span class="blue-anime">Thanks for visiting Rajkumar Blog</span>
         <br>
         <br>
         <span class="purple-anime">Hope you will like it XD</span>
@@ -62,7 +62,7 @@
     <div class="modal-content">
       <br>
       <h5>Welcome to Rajkumar Blog.</h5>
-      <span>Thank you for visiting my Blog. Please enter your name to continue.</span>
+      <span>Thank you for visiting Rajkumar Blog. Please enter your name to continue.</span>
       <br>
       <br>
       <div class="input-field">
