--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <label for="name">Name</label>
         <span class="helper-text" data-error="please enter valid credential"></span>
       </div>
-      <span>FullScreen is recommeneded for better user experience. You can switch between the fullscreen mode by clicking "Rajkumar's Blog" XD</span>
+      <span>FullScreen is recommeneded for better user experience. You can switch between the fullscreen mode by clicking "Rajkumar Blog" XD</span>
     </div>
     <div class="modal-footer">
       <a href="#!" class="modal-close waves-effect waves-green btn-flat red-text" id="goFSnot">close</a>
