--- a/index.html
+++ b/index.html
@@ -237,6 +237,40 @@
             <div class="col s12 m6 l4">
               <div class="card">
                 <div class="card-image">
+                  <img src="images/streetlamps.png" alt="RSMS website preview image">
+                  <span class="card-title" style="background-color: rgba(255, 255, 255, 0.7); color: red; font-weight: 400;">Smart Street</span>
+                </div>
+                <hr>
+                <div class="card-content">
+                  <p>It is an IOT project where the street lamps are optimised with power usage, 
+                      it used optimal feasible solution and ML for power saving.
+                  </p>
+                </div>
+                <div class="card-action">
+                  <a rel="noopener" target="_blank" href="https://cosecure.github.io/frontend/">Link</a>
+                </div>
+              </div>
+            </div>
+            <div class="col s12 m6 l4">
+              <div class="card">
+                <div class="card-image">
+                  <img src="images/cosecure.svg" alt="RSMS website preview image">
+                  <span class="card-title" style="background-color: rgba(255, 255, 255, 0.7); color: red; font-weight: 400;">CoSecure</span>
+                </div>
+                <hr>
+                <div class="card-content">
+                  <p>CoSecure is a ML Based application for covid detection prediction which is trained on user data, 
+                      it used optimal ML model to prediction the user report
+                  </p>
+                </div>
+                <div class="card-action">
+                  <a rel="noopener" target="_blank" href="https://cosecure.github.io/frontend/">Link</a>
+                </div>
+              </div>
+            </div>
+            <div class="col s12 m6 l4">
+              <div class="card">
+                <div class="card-image">
                   <img src="images/rsms.jpg" alt="RSMS website preview image">
                   <span class="card-title" style="background-color: rgba(255, 255, 255, 0.7); color: red; font-weight: 400;">RSMS Project</span>
                 </div>
