--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
         <p class="text-writing-2">
         </p>
       </div>
+      <br>
+      <br>
+      <button id="skip-btn" class="btn waves-effect waves-light btn-large center">Skip
+        <i class="material-icons right">send</i>
+      </button>
     </div>
   </div>
 
@@ -118,7 +123,7 @@
             <p>This blog is created from scratch without any template of workpress or vix. The frontend is implemented with vanilla JavaScript and backend is developed with python (Django). </p>
           </div>
           <div class="col s12 m6 l4 center">
-            <img src="./images/admin-photo.jpg" alt="The admin image or developer picture near waterfalls." width="300" height="300" class="center">
+            <img src="./images/profile.jpg" alt="The admin image or developer picture near waterfalls." width="300" height="300" class="center">
           </div>
         </div>
       </div>
@@ -210,12 +215,14 @@
       <br>
     </article>
     <div class="resume">
-      <img src="./images/img1.png" alt="The first page of the developer resume" width="100%">
+      <img src="./images/resume1.png" alt="The first page of the developer resume" width="100%">
+      <img src="./images/resume2.png" alt="The second page of the developer resume" width="100%">
+      <!-- <img src="./images/img1.png" alt="The first page of the developer resume" width="100%">
       <img src="./images/img2.png" alt="The second page of the developer resume" width="100%">
       <img src="./images/img3.png" alt="The third page of the developer resume" width="100%">
       <img src="./images/img4.png" alt="The fourth page of the developer resume" width="100%">
       <img src="./images/img5.png" alt="The fifth page of the developer resume" width="100%">
-      <img src="./images/img6.png" alt="The sixth page of the developer resume" width="100%">
+      <img src="./images/img6.png" alt="The sixth page of the developer resume" width="100%"> -->
     </div>
     <br>
     <br>  
@@ -247,7 +254,7 @@
                   </p>
                 </div>
                 <div class="card-action">
-                  <a rel="noopener" target="_blank" href="https://cosecure.github.io/frontend/">Link</a>
+                  <a rel="noopener" target="_blank" href="https://github.com/smart-street-system">Link</a>
                 </div>
               </div>
             </div>
