--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     <div class="main-image">
         <div class="heading" id="extfullscreen">
-            <span>Rajkumar Blog</span>
+            <span class="parallexText" style="position: inherit;">Rajkumar Blog</span>
         </div>
     </div>
 
