--- a/index.html
+++ b/index.html
@@ -111,6 +111,16 @@
 
     <br>
 
+    <div class="container center " id="blog-link" style="cursor: pointer;">
+      <div class="card z-index-5">
+        <div class="card-content">
+          <h5>Please click here to checkout my <em><strong>Blog Page</strong></em>, hope you will love it &#128515;</h5>
+        </div>
+      </div>
+    </div>
+
+    <br>
+
     <article>
       <div class="container">
         <div class="row padding-row intro">
