--- a/index.html
+++ b/index.html
@@ -111,10 +111,13 @@
 
     <br>
 
-    <div class="container center " id="blog-link" style="cursor: pointer;">
+    <div class="container center">
       <div class="card z-index-5">
         <div class="card-content">
-          <h5>Please click here to checkout my <em><strong>Blog Page</strong></em>, hope you will love it &#128515;</h5>
+          <h5>Please click below to visit my <em><strong>Blog Page</strong></em>, hope you will love it &#9829;</h5>
+          <button class="btn waves-effect waves-light center" id="blog-link" type="submit" name="action">Visit
+            <i class="material-icons right">send</i>
+          </button>
         </div>
       </div>
     </div>
@@ -154,37 +157,37 @@
           <div class="col s12 m9 l9 center-align">
 
               <div class="progbar row" style="height: 30px;">
-                <p class="col s3" style="margin: 0; font-size: small;">JavaScript</p>
+                <p class="col s3" style="margin: 0; font-size: small;">Frontend development</p>
                 <div class="progress col s9" style="vertical-align: center;">
                   <div class="determinate" style="width: 0%"></div>
                 </div>
               </div>
               <div class="progbar row" style="height: 30px;">
-                <p class="col s3" style="margin: 0; font-size: small;">HTML</p>
+                <p class="col s3" style="margin: 0; font-size: small;">Backend development</p>
                 <div class="progress col s9" style="vertical-align: center;">
                   <div class="determinate" style="width: 0%"></div>
                 </div>
               </div>
               <div class="progbar row" style="height: 30px;">
-                <p class="col s3" style="margin: 0; font-size: small;">CSS</p>
+                <p class="col s3" style="margin: 0; font-size: small;">Machine Learning</p>
                 <div class="progress col s9" style="vertical-align: center;">
                   <div class="determinate" style="width: 0%"></div>
                 </div>
               </div>
               <div class="progbar row" style="height: 30px;">
-                <p class="col s3" style="margin: 0; font-size: small;">React JS</p>
+                <p class="col s3" style="margin: 0; font-size: small;">Data Science</p>
                 <div class="progress col s9" style="vertical-align: center;">
                   <div class="determinate" style="width: 0%"></div>
                 </div>
               </div>
               <div class="progbar row" style="height: 30px;">
-                <p class="col s3" style="margin: 0; font-size: small;">Node JS</p>
+                <p class="col s3" style="margin: 0; font-size: small;">Deep Learning</p>
                 <div class="progress col s9" style="vertical-align: center;">
                   <div class="determinate" style="width: 0%"></div>
                 </div>
               </div>
               <div class="progbar row" style="height: 30px;">
-                <p class="col s3" style="margin: 0; font-size: small;">Django</p>
+                <p class="col s3" style="margin: 0; font-size: small;">LLMs and Gen AI</p>
                 <div class="progress col s9" style="vertical-align: center;">
                   <div class="determinate" style="width: 0%"></div>
                 </div>
